# http

./: .gitignore  CMakeLists.txt  README.md  RequestParser.h  main.c  main.cpp  makefile  tool.h
http_server/: HttpConnection.cpp  HttpConnection.h  RequestParser.cpp  RequestParser.h  aux_class.h  http_server.sln  http_server.vcxproj  log.cpp  log.h  main.cpp  makefile  tool.cpp  tool.h
